bei generatoren kann man nun angeben, welche art von datentyp (long, int etc.) übertragen werden soll, weil odysseus sonst eventuell ein Long erwartet und aus dem bytebuffer parst, obwohl ein double losgeschickt wurde (= falsche werte)
git-svn-id: http://isdb1.offis.uni-oldenburg.de/repos/odysseus/trunk@11766 aa0bda67-78ed-0310-a382-c5338b0f89ba

Former-commit-id: 924b36cea1e8cc02e497d01c6f2ff53d43582bc3