@@ -18,8 +18,6 @@ import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
 
-import de.uniol.inf.is.odysseus.generator.valuegenerator.IValueGenerator;
-
 /**
  * A lightweight adaption of Tuple from Odysseus with no direct dependencies!
  * 
@@ -30,18 +28,11 @@ public class DataTuple {
 
 	protected List<Object> attributes;
 	protected int memSize = -1;
-	
+
 	public DataTuple() {
 		this.attributes = new ArrayList<Object>();
-	}
-	
-	public DataTuple(IValueGenerator... generators){
-		this.attributes = new ArrayList<Object>();
-		for(IValueGenerator v : generators){
-			this.addAttribute(v.nextValue());
-		}
-	}
-	
+	}	
+
 	public DataTuple(int size) {
 		this.attributes = new ArrayList<Object>(size);
 	}
@@ -98,12 +89,15 @@ public class DataTuple {
 	}
 
 	public void addBoolean(boolean value) {
-		 this.attributes.add(Boolean.valueOf(value));
-//		if (value) {
-//			this.attributes.add(new Integer(1));
-//		} else {
-//			this.attributes.add(new Integer(0));
-//		}
+		this.attributes.add(Boolean.valueOf(value));
+	}
+
+	public void addBoolean(double value) {
+		if (value == 1.0) {
+			addBoolean(true);
+		} else {
+			addBoolean(false);
+		}
 	}
 
 	public void addString(Object value) {
@@ -179,12 +173,11 @@ public class DataTuple {
 		}
 		return out;
 	}
-	
-	public List<DataTuple> asList(){
+
+	public List<DataTuple> asList() {
 		ArrayList<DataTuple> liste = new ArrayList<DataTuple>();
 		liste.add(this);
 		return liste;
 	}
-	
-	
+
 }
